k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudtrackr-backend-svc
  namespace: cloudtrackr
spec:
  selector:
    app: cloudtrackr-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
