k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudtrackr-ingress
  namespace: cloudtrackr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cloudtrackr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudtrackr-backend-svc
                port:
                  number: 80
